more lint cleanups (#4861)
more lint cleanups